# externaldata

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindCxxTest.cmake  FooExternalData.cmake
Testing/Data/: BSS_11841_event.nxs.md5
Utilities/Git/: README.md  git-add-test-data
foobar/: README.md
foobar/test/: CMakeLists.txt  ExampleUnitTestNoData.h  ExampleUnitTestWithData.h
